--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,10 @@
 	"versionName": "1.0.0",
 	"versionCode": "100",
 	"transformPx": false,
+	"networkTimeout":{
+		"request":15000,
+		"uploadFile":15000
+	},
     /* 5+App特有相关 */
 	"app-plus": {
 		"usingComponents": true,
@@ -59,6 +63,20 @@
     /* 快应用特有相关 */
 	"quickapp": {
 
+	},
+	/* H5跨域处理*/
+	"h5":{
+		"devServer":{
+			"port":8080,
+			"disableHostCheck":true,
+			"proxy":{
+				"/apis":{
+					"target":"http://cxx.99qupai.com",
+					"changeOrigin":true,
+					"secure":false
+				}
+			}
+		}
 	},
     /* 小程序特有相关 */
 	"mp-weixin": {
