--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/a393821466/app_project#readme",
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
-    "uni-simple-router": "^1.2.5"
+    "crypto-js": "^3.1.9-1"
   }
 }
