--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "crypto-js": "^3.1.9-1",
     "moment": "^2.24.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@dcloudio/uni-ui": "^1.0.4"
+  }
 }
