完成实名认证，加入提现页面，加入小数字键盘组件

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name" : "uni_video",
+	"name" : "uni_futures",
 	"appid" : "",
 	"description": "",
 	"versionName": "1.0.0",
@@ -71,7 +71,7 @@
 			"disableHostCheck":true,
 			"proxy":{
 				"/apis":{
-					"target":"https://tmk.rvsii.com",
+					"target":"http://cxx.99qupai.com",
 					"changeOrigin":true,
 					"secure":false
 				}
