--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "期货",
-    "appid" : "",
+    "appid" : "__UNI__A47348D",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
