加入清理缓存功能,测试资金明细列表在ios上的下拉刷新和上拉加载，字体大小功能字体像素调整，修改退出只清理令牌和用户信息，把首页缓存化

--- a/manifest.json
+++ b/manifest.json
@@ -66,7 +66,7 @@
             "disableHostCheck" : true,
             "proxy" : {
                 "/apis" : {
-                    "target" : "http://cxx.99qupai.com",
+                    "target" : "https://tmk.eanjee.com",
                     "changeOrigin" : true,
                     "secure" : false
                 }
