--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/a393821466/app_project#readme",
   "dependencies": {
     "crypto-js": "^3.1.9-1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "uuid": "^3.3.2",
+    "google-protobuf": "^3.6.1"
   },
   "devDependencies": {
     "@dcloudio/uni-ui": "^1.0.4"
